--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -9,17 +9,13 @@
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
-               app:srcCompat="@drawable/splashscreen"
                android:contentDescription="@string/app_name"
                android:scaleType="fitXY"/>
 
     <ImageView android:id="@+id/ivSplashLogo"
-               android:layout_width="250dp"
-               android:layout_height="44dp"
-               android:layout_gravity="center_horizontal"
-               android:contentDescription="@string/app_name"
+               android:layout_width="200dp"
+               android:layout_height="200dp"
+               android:layout_gravity="center"
                android:scaleType="fitXY"
-               android:layout_marginTop="200dp"
-               app:srcCompat="@drawable/ic_mh_colour_logo"/>
-
+               app:srcCompat="@mipmap/ic_launcher_round"/>
 </FrameLayout>
