--- a/app/src/main/res/navigation/main_nav.xml
+++ b/app/src/main/res/navigation/main_nav.xml
@@ -1,10 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
-            xmlns:app="http://schemas.android.com/apk/res-auto"
-            android:id="@+id/sign_nav"
-            app:startDestination="@id/signInSignUpFragment">
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:id="@+id/main_nav"
+        app:startDestination="@id/mainFragment">
 
-    <fragment android:id="@+id/signInSignUpFragment"
-              android:name="com.rickandmorty.ui.authentication.SignInSignUpFragment"
-              android:label="SignInSignUpFragment"/>
+    <fragment
+            android:id="@+id/mainFragment"
+            android:name="com.rickandmorty.ui.fragments.MainFragment"
+            android:label="MainFragment"
+            tools:layout="@layout/fragment_main" />
 </navigation>
